<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<!--single option radio buttons list-->
    <ListPreference
        android:title="@string/number_of_guesses_title"
        android:key="settings_numberOfGuesses"
        android:summary="@string/number_of_guesses_summary"
        android:entries="@array/num_of_guesses_entries"
        android:entryValues="@array/num_of_guesses_entry_values"
        android:persistent="true"
        android:defaultValue="4">

    <!--persistence saves the settings to SharedPreferences-->
    </ListPreference>

    <!--multi choice check boxes list-->
    <MultiSelectListPreference
        android:title="@string/animal_types_title"
        android:summary="@string/animal_types_summary"
        android:key="settings_animalTypes"
        android:entries="@array/animal_types_entries"
        android:entryValues="@array/animal_types_entry_values"
        android:persistent="true"
        android:defaultValue="@array/animal_types_entry_values">
    </MultiSelectListPreference>

    <ListPreference
        android:title="@string/choose_bg_title"
        android:summary="@string/choose_bg_summary"
        android:key="settings_chooseBackgroundColor"
        android:entries="@array/choose_bg_colors"
        android:entryValues="@array/choose_bg_colors"
        android:persistent="true"
        android:defaultValue="@string/default_background">
    </ListPreference>

    <ListPreference
        android:title="@string/choose_font_title"
        android:summary="@string/choose_font_summary"
        android:key="settings_chooseFont"
        android:entries="@array/choose_font_entries"
        android:entryValues="@array/choose_font_entry_values"
        android:persistent="true"
        android:defaultValue="@string/default_font">
    </ListPreference>

</androidx.preference.PreferenceScreen>